apps/prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: prowlarr.h18s.lab
      http:
        paths:
          - {
              path: /,
              pathType: Prefix,
              backend: { service: { name: prowlarr, port: { number: 9696 } } },
            }
